fix: clean up header spacing and hero alignment and breakpoints

--- a/themes/rhds/assets/css/main.css
+++ b/themes/rhds/assets/css/main.css
@@ -57,9 +57,18 @@ h6 {
   font-size: var(--rh-font-size-heading-xs, 1.25rem);
 }
 
+:is(h1, h2, h3, h4, h5, h6),
 p {
   max-width: 60rem;
+}
+
+h1,
+p {
   margin-block: 0 var(--rh-space-xl, 24px);
+}
+
+:is(h2, h3, h4, h5, h6) {
+  margin-block: var(--rh-space-xl, 24px) var(--rh-space-lg, 16px);
 }
 
 img {
@@ -139,7 +148,7 @@ main {
 #hero .hero-container {
   display: grid;
   grid-template-columns: 1fr;
-  padding: var(--rh-space-lg, 16px);
+  padding: 0 var(--rh-space-lg, 16px);
 }
 
 #hero .hero-cta {
@@ -150,26 +159,23 @@ main {
 
 @media screen and (min-width: 576px) {
   #hero {
-    background-image: url(/images/openshift-desktop-hero.svg);
-    background-repeat: no-repeat;
-    background-position: center;
-  }
-
-  #hero .hero-container {
-    grid-template-columns: 1.5fr 0.5fr;
+    padding-block: var(--rh-space-2xl, 48px);
   }
 }
 
 @media screen and (min-width: 768px) {
   #hero {
-    padding-block: var(--rh-length-4xl, 64px);
-    padding: var(--rh-space-lg, 16px) var(--rh-space-2xl, 32px);
+    background-image: url(/images/openshift-desktop-hero.svg);
+    background-repeat: no-repeat;
+    background-position: top center;
+    
   }
 
   #hero .hero-container {
-    grid-template-columns: 1.25fr 0.75fr;
     margin: 0 auto;
     max-width: 1320px;
+    padding: 0 var(--rh-space-2xl, 32px);
+    grid-template-columns: 1.5fr 0.5fr;
   }
 }
 
